--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL = 'https://api.openweathermap.org/data/2.5'
-REACT_APP_API_KEY = 'a2767a1d3470df78ba6f059b52aff766'
-REACT_APP_ICON_URL = 'https://openweathermap.org/img/w'
+VITE_API_URL = 'https://api.openweathermap.org/data/2.5'
+VITE_API_KEY = a2767a1d3470df78ba6f059b52aff766
+VITE_ICON_URL = 'https://openweathermap.org/img/w'
